--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Signup Form</h1>
         <form id="signupForm" action="#" method="POST" novalidate>
-            <label for="regNo">Registration Number *</label>
+            <label for="regNo">Reg Number *</label>
             <input type="text" id="regNo" name="regNo" placeholder="Ex: 25BCE0001" required>
             <span class="error" id="regNoError"></span>
 
